added hero section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 </head>
 
 <body>
-
+    <!-- Hero Section -->
+     <div class="bg-img-hero">
+        <div class="container">
+            <div class="row hero-section-custom">
+                <div class="col s12 center-align white-text">
+                    <h1 class="hero-header">Land Rover Defender</h1>
+                    <p class="hero-paragraph">A safe way to move around in style.</p>
+                </div>
+            </div>
+        </div>
+     </div>
 </body>
 
 </html>
