added about section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Hero Section -->
-     <div class="bg-img-hero">
+    <div class="bg-img-hero">
         <div class="container">
             <div class="row hero-section-custom">
                 <div class="col s12 center-align white-text">
@@ -30,7 +30,32 @@
                 </div>
             </div>
         </div>
-     </div>
+    </div>
+    <!-- About Section -->
+    <div class="grey darken-4 about-section  valign-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m6 center-align">
+                    <div class="about-image">
+                        <img src="img/img-1.png" alt="Image" class="responsive-img center-align">
+                    </div>
+                </div>
+                <div class="col s12 m6 white-text">
+                    <h2 class="about-header">
+                        Safe. Relaxing. Good to ride in. <br>
+                        <span class="about-under-header">Subtly decorated.</span>
+                    </h2>
+                    <p class="about-paragraph">
+                        The Land Rover Defender blends rugged reliability
+                        with refined comfort. Its advanced safety features
+                        and smooth ride ensure peace of mind on any journey.
+                        The interior's subtle, tasteful design offers a serene
+                        and relaxing atmosphere, making every drive a pleasure.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
