added overview section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <!-- About Section -->
-    <div class="grey darken-4 about-section  valign-wrapper">
+    <div class="grey darken-4 about-section valign-wrapper">
         <div class="container">
             <div class="row">
                 <div class="col s12 m6 center-align">
@@ -56,6 +56,40 @@
             </div>
         </div>
     </div>
+    <!-- Overview Section -->
+    <div class="white overview-section valign-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m6 overview-part-1">
+                    <h3 class="overview-header">
+                        Overview <br> <span class="overview-under-header">What is it?</span>
+                    </h3>
+                    <p class="overview-paragraph">
+                        The 2022 Land Rover Defender blends iconic off-road 
+                        capability with modern sophistication. It offers powerful
+                        engine options, including a 2.0-liter turbocharged inline-four
+                        and a 3.0-liter mild-hybrid inline-six, ensuring robust performance.
+                        Advanced features like Terrain Response 2 and All-Terrain Progress
+                        Control enhance its ability to tackle challenging terrains with ease.
+                    </p>
+                    <p class="overview-paragraph">
+                        Inside, the Defender combines durability with luxury,
+                        featuring high-quality materials and the intuitive
+                        Pivi Pro infotainment system with a 10-inch touchscreen.
+                        Practical and versatile, it offers ample cargo space and 
+                        various seating configurations, making it ideal for adventurers
+                        and families alike.
+                    </p>
+                </div>
+                <div class="col s12 m6">
+                    <div class="overview-image">
+                        <img src="img/img-2.png" alt="Image" class="responsive-img center-align">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
