--- a/index.html
+++ b/index.html
@@ -89,7 +89,33 @@
             </div>
         </div>
     </div>
+    <!-- Gallery Section -->
+     <div class="gallery-section grey darken-4 valign-wrapper">
+        <div class="container">
+            <h4 class="gallery-header white-text center-align">Gallery</h4>
+            <div class="row">
+                <div class="col s12 m6 l3">
+                    <img src="img/img-3.jpg" alt="" class="responsive-img materialboxed">
+                </div>
+                <div class="col s12 m6 l3">
+                    <img src="img/img-4.jpg" alt="" class="responsive-img materialboxed">
+                </div>
+                <div class="col s12 m6 l3">
+                    <img src="img/img-5.jpg" alt="" class="responsive-img materialboxed">
+                </div>
+                <div class="col s12 m6 l3">
+                    <img src="img/img-6.jpg" alt="" class="responsive-img materialboxed">
+                </div>
+            </div>
+            <p class="gallery-paragraph white-text center-align">"Built to conquer any terrain..."</p>
+        </div>
+     </div>
+    
 
+     <!-- Cusom JS -->
+      <script src="js/script.js"></script>
+     <!-- Materialize JS -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
