added driving section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,26 @@
             </div>
             <p class="gallery-paragraph white-text center-align">"Built to conquer any terrain..."</p>
         </div>
-     </div>
+    </div>
+     <!-- Driving Section -->
+      <div class="bg-img-driving">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m6 white-text driving-section">
+                    <h5 class="driving-header">Driving</h5>
+                    <span class="under-header-driving">What is it like on trails?</span>
+                    <p class="driving-paragraph">
+                        Whether you're navigating the daily commute or exploring
+                        remote trails, the 2022 Land Rover Defender offers a versatile
+                        and enjoyable driving experience. Its combination of powerful
+                        engines, sophisticated suspension, and cutting-edge technology
+                        ensures that drivers can tackle any journey with confidence and ease.
+                    </p>
+                </div>
+            </div>
+        </div>
+      </div>
+      
     
 
      <!-- Cusom JS -->
