added footer section

--- a/index.html
+++ b/index.html
@@ -128,8 +128,51 @@
             </div>
         </div>
       </div>
+      <!-- Footer -->
+       <footer class="footer">
+        <div class="container">
+            <h6 class="footer-header">Dealers In Your Location</h6>
+            <div class="row">
+                <div class="col s12 m3">
+                    <p class="address">Address</p>
+                    <p>Land Rover Los Angeles</p>
+                    <p>1900 S Figueroa St,</p>
+                    <p>Los Angeles, CA 90007</p>
+                    <p class="phone">Phone</p>
+                    <p>(213) 745-6785</p>
+                    <p>(213) 745-6786</p>
+                </div>
+                <div class="col s12 m3">
+                    <p class="address">Address</p>
+                    <p>Land Rover Manhattan</p>
+                    <p>787 11th Ave,</p>
+                    <p>New York, NY 10019</p>
+                    <p class="phone">Phone</p>
+                    <p>(212) 549-2203</p>
+                    <p>(212) 549-2204</p>
+                </div>
+                <div class="col s12 m3">
+                    <p class="address">Address</p>
+                    <p>Land Rover Miami</p>
+                    <p>2060 Biscayne Blvd,</p>
+                    <p>Miami, FL 33137</p>
+                    <p class="phone">Phone</p>
+                    <p>(305) 571-1200</p>
+                    <p>(305) 571-1212</p>
+                </div>
+                <div class="col s12 m3">
+                    <p class="address">Address</p>
+                    <p>Land Rover Dallas</p>
+                    <p>11400 N Central Expy,</p>
+                    <p>Dallas, TX 75243</p>
+                    <p class="phone">Phone</p>
+                    <p>(214) 691-4294</p>
+                    <p>(214) 594-5800</p>
+                </div>
+            </div>
+        </div>
+       </footer>
       
-    
 
      <!-- Cusom JS -->
       <script src="js/script.js"></script>
