added small fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Hero Section -->
-    <div class="bg-img-hero">
+    <section class="bg-img-hero">
         <div class="container">
             <div class="row hero-section-custom">
                 <div class="col s12 center-align white-text">
@@ -30,14 +30,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- About Section -->
-    <div class="grey darken-4 about-section valign-wrapper">
+    <section class="grey darken-4 about-section valign-wrapper">
         <div class="container">
             <div class="row">
                 <div class="col s12 m6 center-align">
                     <div class="about-image">
-                        <img src="img/img-1.png" alt="Image" class="responsive-img center-align">
+                        <img src="img/img-1.png" alt="Image" class="responsive-img materialboxed center-align">
                     </div>
                 </div>
                 <div class="col s12 m6 white-text">
@@ -55,9 +55,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Overview Section -->
-    <div class="white overview-section valign-wrapper">
+    <section class="white overview-section valign-wrapper">
         <div class="container">
             <div class="row">
                 <div class="col s12 m6 overview-part-1">
@@ -83,35 +83,35 @@
                 </div>
                 <div class="col s12 m6">
                     <div class="overview-image">
-                        <img src="img/img-2.png" alt="Image" class="responsive-img center-align">
+                        <img src="img/img-2.png" alt="Image" class="responsive-img materialboxed center-align">
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Gallery Section -->
-     <div class="gallery-section grey darken-4 valign-wrapper">
+    <section class="gallery-section grey darken-4 valign-wrapper">
         <div class="container">
             <h4 class="gallery-header white-text center-align">Gallery</h4>
             <div class="row">
-                <div class="col s12 m6 l3">
+                <div class="col s12 m6 l3 gallery-margin-img">
                     <img src="img/img-3.jpg" alt="" class="responsive-img materialboxed">
                 </div>
-                <div class="col s12 m6 l3">
+                <div class="col s12 m6 l3 gallery-margin-img">
                     <img src="img/img-4.jpg" alt="" class="responsive-img materialboxed">
                 </div>
-                <div class="col s12 m6 l3">
+                <div class="col s12 m6 l3 gallery-margin-img">
                     <img src="img/img-5.jpg" alt="" class="responsive-img materialboxed">
                 </div>
-                <div class="col s12 m6 l3">
+                <div class="col s12 m6 l3 gallery-margin-img">
                     <img src="img/img-6.jpg" alt="" class="responsive-img materialboxed">
                 </div>
             </div>
             <p class="gallery-paragraph white-text center-align">"Built to conquer any terrain..."</p>
         </div>
-    </div>
+    </section>
      <!-- Driving Section -->
-      <div class="bg-img-driving">
+      <section class="bg-img-driving">
         <div class="container">
             <div class="row">
                 <div class="col s12 m6 white-text driving-section">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-      </div>
+      </section>
       <!-- Footer -->
        <footer class="footer">
         <div class="container">
